kubernetes/srvpwd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: srvpwd-app
  namespace: random-passwd
  labels:
    app: srvpwd-app
spec:
#  replicas: 1
  selector:
    matchLabels:
      app: srvpwd-app
  template:
    metadata:
      labels:
        app: srvpwd-app
    spec:
      containers:
      - name: srvpwd-app
        image: fpinero/srvpwd:0.0.1
        ports:
        - containerPort: 8080
