kubernetes/srvpwd-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: srvpwd-service
  namespace: random-passwd
  labels:
    app: srvpwd-app
spec:
  selector:
    app: srvpwd-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
