kubernetes/ingress-ngnix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srvpwd-ingress
spec:
  rules:
  - host: randompwd.lixdevops.navify.com
    http:
      paths:
      - path: /genpwd
        pathType: Prefix
        backend:
          service:
            name: srvpwd-service
            port:
              number: 80
  ingressClassName: nginx
